src/objects/Direct_To_Pro_Sales__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Direct To Pro Sales</relationshipLabel>
        <relationshipName>Direct_To_Pro_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_HD_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Phone = HD Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LYTD_formula__c</fullName>
        <formula>and( Date_of_Purchase__c &lt;= date(year($Setup.Current_Month_POS__c.Current_Month_POS__c)-1,month($Setup.Current_Month_POS__c.Current_Month_POS__c),day($Setup.Current_Month_POS__c.Current_Month_POS__c)),Date_of_Purchase__c &gt;=date(year( $Setup.Current_Month_POS__c.Start_Month__c )-1,month( $Setup.Current_Month_POS__c.Start_Month__c ),day( $Setup.Current_Month_POS__c.Start_Month__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LYTD formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LY_to_date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Last Year same time frame as this year.  To be manually populated via crm fusion.  used as a rollup summary</description>
        <label>LY to date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_year_DTP_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last year DTP flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Direct__c</fullName>
        <formula>isnumber( PO_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <label>Ordered By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_of_the_store__c</fullName>
        <formula>Store_of_Purchase__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner of the store</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct to site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_Year_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be set via CRM fusion using batch jobs that run nightly and update the rolling year flag for the ordered by date if within this year.  This field then flows as a rollup summary on the account.</description>
        <label>Roll Year Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_PO__c</fullName>
        <description>SAP PO Number assigned at order create in our ECC system.</description>
        <label>SAP PO #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Add1__c</fullName>
        <label>Ship To Add1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Add2__c</fullName>
        <label>Ship To Add2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <label>Ship To Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number_Backend__c</fullName>
        <label>Store Number Backend</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_of_Purchase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store of Purchase</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>Direct To Pro Sales</relationshipLabel>
        <relationshipName>Direct_To_Pro_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TYTD_Formula__c</fullName>
        <formula>and( Date_of_Purchase__c &lt;= $Setup.Current_Month_POS__c.Current_Month_POS__c ,Date_of_Purchase__c &gt;= $Setup.Current_Month_POS__c.Start_Month__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TYTD Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TYTD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This year to date - last full month - as it pertains to cash and carry, as we get it after month end.</description>
        <label>TYTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tyson_Discount__c</fullName>
        <description>Amount discounted on first orders with tyson coupon</description>
        <inlineHelpText>Tyson coupon discount amount</inlineHelpText>
        <label>Tyson Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tyson_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To know which orders are a tyson orders.  to be manually checked and fed to BI</description>
        <label>Tyson Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>match_to_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a lead was found that matched a DTP sale, check this box</description>
        <inlineHelpText>If a lead was found that matched a DTP sale</inlineHelpText>
        <label>match to lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>no_match__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>a search was done, and no match was found</inlineHelpText>
        <label>no match</label>
        <type>Checkbox</type>
    </fields>
    <label>Direct To Pro Sales</label>
    <listViews>
        <fullName>BLT_3016</fullName>
        <columns>NAME</columns>
        <columns>Contact_Phone_HD_Store__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Date_of_Purchase__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Store_of_Purchase__c</columns>
        <columns>Account_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>contains</operation>
            <value>BLT HOMES - Kansas City 3016</value>
        </filters>
        <filters>
            <field>Current_Year__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Store_of_Purchase__c</field>
            <operation>notEqual</operation>
            <value>3016</value>
        </filters>
        <label>BLT 3016</label>
        <language>en_US</language>
        <sharedTo>
            <role>IT_DEV</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Generic_Account</fullName>
        <columns>NAME</columns>
        <columns>SAP_PO__c</columns>
        <columns>Contact_Phone_HD_Store__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Date_of_Purchase__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>Store_of_Purchase__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Account_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account_Updated__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>contains</operation>
            <value>Generic Account</value>
        </filters>
        <label>Generic Account</label>
        <language>en_US</language>
        <sharedTo>
            <role>IT_DEV</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Generic_Account_New</fullName>
        <columns>Contact_Phone_HD_Store__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Date_of_Purchase__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>Store_of_Purchase__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>equals</operation>
            <value>Generic Account</value>
        </filters>
        <filters>
            <field>no_match__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Generic Account Not reviewed</label>
        <language>en_US</language>
        <sharedTo>
            <role>IT_DEV</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Generic_Account_Nov</fullName>
        <columns>Account_Name__c</columns>
        <columns>Contact_Phone_HD_Store__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Date_of_Purchase__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>Store_of_Purchase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>equals</operation>
            <value>Generic Account</value>
        </filters>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>greaterThan</operation>
            <value>11/1/2012</value>
        </filters>
        <label>Generic Account Nov</label>
        <language>en_US</language>
        <sharedTo>
            <role>IT_DEV</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Generic_Account_hd</fullName>
        <columns>Contact_Phone_HD_Store__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Date_of_Purchase__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>Store_of_Purchase__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>equals</operation>
            <value>Generic Account</value>
        </filters>
        <filters>
            <field>Contact_Name__c</field>
            <operation>startsWith</operation>
            <value>Home</value>
        </filters>
        <label>Generic Account with hd as contact</label>
        <language>en_US</language>
        <sharedTo>
            <role>IT_DEV</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Generic_Account_old</fullName>
        <columns>Contact_Phone_HD_Store__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Date_of_Purchase__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>Store_of_Purchase__c</columns>
        <columns>Account_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>equals</operation>
            <value>Generic Account dtp</value>
        </filters>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2012</value>
        </filters>
        <label>Generic Account old</label>
        <language>en_US</language>
        <sharedTo>
            <role>IT_DEV</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UNITED_RENOVATIONS</fullName>
        <columns>Contact_Phone_HD_Store__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Date_of_Purchase__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Store_of_Purchase__c</columns>
        <columns>Account_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>contains</operation>
            <value>UNITED RENOVATIONS</value>
        </filters>
        <filters>
            <field>Current_Year__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>UNITED RENOVATIONS</label>
        <language>en_US</language>
        <sharedTo>
            <role>IT_DEV</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DTP-{000000000}</displayFormat>
        <label>DTP#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct To Pro Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>